styles/style.css
/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */

.page {
  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
  background-color: var(--bg-color);
  background-image: var(--cover-image);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.header {
  display: grid;
  grid-template-rows: repeat(3, 1fr);
  gap: 60px;
  position: relative;
  height: 100vh;
  min-height: 668px;
  padding: 10px;
}

.header__dark-theme-text {
  display: var(--only-dark);
  position: absolute;
  top: 0px;
  right: 24px;
  text-transform: uppercase;
  color: var(--accent-color);
  font-weight: 400;
  font-size: 18px;
  line-height: 25px;
  padding-top: 10px;
  padding-right: 15px;
  letter-spacing: 0;
}

.header__dark-theme-text::after {
  content: "";
  display: block;
  width: 9px;
  height: 9px;
  background-color: var(--accent-color);
  box-shadow: 0px 0px 4px 2px var(--accent-color);
  border-radius: 50%;
  position: absolute;
  top: 17px;
  right: -4px;
}

.decorated-zone {
  position: relative;
}

.decorated-zone::before,
.decorated-zone::after {
  content: "";
  position: absolute;
  width: 25px;
  height: 25px;
  border-color: var(--graphic-color);
  border-style: solid;
}

.decorated-zone::before {
  left: 10px;
  bottom: 10px;
  border-width: 0 0 1px 1px;
}

.decorated-zone::after {
  right: 10px;
  top: 10px;
  border-width: 1px 1px 0 0;
}

.header__title {
  font-size: var(--main-title-font-size);
  line-height: 0.83;
  color: var(--main-title-color);
  text-shadow: 4px 4px 0 var(--accent-color);
  align-self: center;
}

.header__paragraph {
  display: block;
  height: fit-content;
  align-self: start;
  justify-self: end;
}

.title-decor {
  background-color: var(--accent-color);
  color: var(--subtitle-color);
  font-size: 18px;
  font-weight: 700;
  line-height: 23.4px;
}

.header__theme-menu {
  justify-self: end;
  align-self: end;
  padding-bottom: 6px;
}

.header__theme-menu-list {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.header__theme-menu-button {
  display: block;
  width: 70px;
  height: 26px;
  color: var(--graphic-color);
  background-color: transparent;
  cursor: pointer;
  border: 1px solid transparent;
  text-transform: lowercase;
}

.header__theme-menu-button_active {
  pointer-events: none;
  border: 1px solid var(--graphic-color);
}

.header__theme-menu-button:hover {
  border: 1px solid rgb(var(--graphic-color-rgb) / 0.4);
}

.header__theme-menu-button:focus-visible {
  outline: none;
  border-bottom: 1px solid var(--graphic-color);
}

.main {
  display: grid;
  gap: 50px;
}

.content-section {
  display: grid;
  grid-template-columns: 1fr;
  column-gap: 40px;
  row-gap: 20px;
  padding: 0 10px;
}

.content-section__body {
  display: grid;
  gap: 20px;
}

.content-section__title {
  font-size: 18px;
  line-height: 23.4px;
  font-weight: 700;
  color: var(--title-color);
}

.content-section__link {
  text-shadow: 2px 2px 0 var(--accent-color);
  text-decoration: none;
  border: 1px solid transparent;
}

.content-section__link:hover {
  border-bottom: 1px solid currentColor;
}

.content-section__link:focus-visible {
  outline: none;
  border: 1px solid currentColor;
}

.content-section__card {
  display: grid;
  gap: 10px;
}

.content-section__card-text {
  color: var(--text-color);
  font-size: 18px;
  line-height: 23.4px;
  font-weight: 400;
}

.content-section__card-title_regular {
  font-weight: 400;
}

.section-gallery {
  display: grid;
  grid-template-columns: auto;
  gap: 10px;
}

.gallery {
  display: grid;
  gap: 10px;
}

.gallery__image {
  display: block;
  inline-size: 100%;
  block-size: 100%;
  object-fit: cover;
}

.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  min-height: 668px;
  padding: 10px;
}

.footer__title {
  font-size: var(--main-title-font-size);
  font-weight: 700;
  line-height: 0.83;
  color: var(--main-title-color);
  text-shadow: 2px 2px 0 #ff0070;
}

@media (width >= 768px) {
  .page {
    gap: 60px;
  }

  .decorated-zone::before {
    left: 20px;
    bottom: 20px;
  }

  .decorated-zone::after {
    right: 20px;
    top: 20px;
  }

  .header {
    min-height: 1024px;
    padding: 20px;
  }

  .header__dark-theme-text {
    top: 10px;
    right: 32px;
  }

  .header__theme-menu {
    padding-bottom: 18px;
  }

  .header__title {
    margin-inline-start: -20px;
  }

  .header__paragraph {
    margin-top: 8px;
    max-inline-size: 364px;
  }

  .main {
    gap: 80px;
  }

  .content-section {
    grid-template-columns: repeat(3, 1fr);
    padding: 0 20px;
  }

  .content-section__title {
    grid-column: 1;
  }

  .content-section__card {
    grid-column: 2 / 4;
  }

  .section-reasons .content-section__title {
    grid-column: 1;
  }

  .section-reasons .content-section__card {
    grid-column: 1 / 4;
  }

  .section-tips {
    grid-template-columns: repeat(3, 1fr);
  }

  .section-tips .content-section__title {
    grid-column: 1;
  }

  .section-tips .content-section__body {
    grid-column: 2 / 4;
  }

  .section-gallery {
    grid-template-columns: 1fr;
    gap: 20px;
  }

  .section-gallery .content-section__card-title {
    grid-column: 1 / -1;
    align-self: start;
  }

  .content-section__body .content-section__card {
    grid-column: auto;
  }

  .gallery {
    width: 100%;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, auto);
    gap: 20px;
  }

  .gallery__item:nth-child(1) {
    grid-column: 1 / 3;
    grid-row: 1 / 2;
  }

  .gallery__item:nth-child(2) {
    grid-column: 3 / 4;
    grid-row: 1 / 3;
  }

  .gallery__item:nth-child(3) {
    grid-column: 1 / 2;
    grid-row: 2 / 4;
  }

  .gallery__item:nth-child(4) {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
  }

  .gallery__item:nth-child(5) {
    grid-column: 2 / 4;
    grid-row: 3 / 4;
  }
}

@media (width >= 1024px) {
  .header {
    min-height: 768px;
  }

  .header__theme-menu {
    justify-self: center;
    align-self: flex-start;
  }

  .header__theme-menu-list {
    flex-direction: row;
  }

  .header__paragraph {
    max-inline-size: 491px;
    margin-top: 17px;
  }

  .section-reasons .content-section__title {
    grid-column: 1 / -1;
    max-inline-size: calc((100% - 40px) / 3);
  }

  .section-reasons .content-section__card {
    grid-column: auto;
    align-self: start;
  }
}

